syntax = "proto2";

package sf.solana.block_meta.v1;

message PbFields {
  required string k = 1;
}

message PbCurveLayout {
  required string name = 1;
  optional PbFields fields = 2;
}

message PbWindowedCircuitBreakerConfigV0Layout {
  required uint64 windowSizeSeconds = 1;
  required string thresholdType = 2;
  required uint64 threshold = 3;
}

message PbInitializeTreasuryManagementArgsV0Layout {
  required string authority = 1;
  required PbCurveLayout curve = 2;
  required int64 freezeUnixTime = 3;
  required PbWindowedCircuitBreakerConfigV0Layout windowConfig = 4;
}

message PbUpdateTreasuryManagementArgsV0Layout {
  required string authority = 1;
  required PbCurveLayout curve = 2;
  required int64 freezeUnixTime = 3;
}

message PbRedeemArgsV0Layout {
  required uint64 amount = 1;
  required uint64 expectedOutputAmount = 2;
}

message PbInitializeTreasuryManagementV0Layout {
  required PbInitializeTreasuryManagementArgsV0Layout initializeTreasuryManagementV0Args = 1;
}

message PbUpdateTreasuryManagementV0Layout {
  required PbUpdateTreasuryManagementArgsV0Layout updateTreasuryManagementV0Args = 1;
}

message PbRedeemV0Layout {
  required PbRedeemArgsV0Layout redeemV0Args = 1;
}

message Arg {
  required string instruction_type = 1;
  optional PbInitializeTreasuryManagementV0Layout initializeTreasuryManagementV0 = 2;
  optional PbUpdateTreasuryManagementV0Layout updateTreasuryManagementV0 = 3;
  optional PbRedeemV0Layout redeemV0 = 4;
}

message InputAccounts {
  optional string payer = 1;
  optional string treasuryManagement = 2;
  optional string treasuryMint = 3;
  optional string supplyMint = 4;
  optional string mintAuthority = 5;
  optional string circuitBreaker = 6;
  optional string treasury = 7;
  optional string systemProgram = 8;
  optional string circuitBreakerProgram = 9;
  optional string associatedTokenProgram = 10;
  optional string tokenProgram = 11;
  optional string authority = 12;
  optional string from = 13;
  optional string to = 14;
  optional string owner = 15;
  optional string admin = 16;
  optional string destTreasury = 17;
}

message Meta {
  required string block_date = 1;
  required int64 block_time = 2;
  required string tx_id = 3;
  required string dapp = 4;
  required uint64 block_slot = 5;
  required uint32 instruction_index = 7;
  required bool is_inner_instruction = 8;
  required uint32 inner_instruction_index = 9;
  required string instruction_type = 10;
  required Arg args = 11;
  required InputAccounts input_accounts = 12;
}

message Output {
  repeated Meta data = 1;
}